plugins {
    id 'maven-publish'
    id 'java'
}

version = project.mod_version
group = project.maven_group

repositories {
    mavenCentral()
    // Add repositories for your dependencies here.
}

dependencies {
    implementation("org.apache.httpcomponents:httpclient:4.5.13")
    implementation("com.google.code.gson:gson:2.10.1")
    implementation("org.lwjgl:lwjgl-glfw:3.3.3")
}

processResources {
//    inputs.property "version", project.version
//    inputs.property "loader_version", project.loader_version
    filteringCharset "UTF-8"

}

java.toolchain.languageVersion.set(JavaLanguageVersion.of(8))
java {
    archivesBaseName = project.archives_base_name
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
    manifest {
        attributes 'Fabric-MixinConfigs': 'modid.mixin.json',
                'MixinConfigs': 'modid.mixin.json'
    }
}

// Configure the maven publication if needed.
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        // Add repositories for publishing here.
    }
}
